# Qr_code_crypto_manus

./: Codebase Evaluation and Improvement Plan.md  README.md  __main__.py  app.py  config.py  icon.py  network.py  pyproject.toml  security.py  test_base64.py  test_crypto_mnemonic.py  test_opencv_read.py  test_qr_code_manager.py  test_secure_string.py  todo.md
src/secure_qr_tool/: __init__.py  config.py  qr.py  security.py
