[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-qr-code-tool"
version = "3.0.0"
description = "Secure QR Code Tool with AES-256 encryption and mnemonic support"
readme = "README.md"
authors = [{name = "Secure QR Team"}]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41",
    "mnemonic>=0.20",
]

[project.optional-dependencies]
ui = [
    "PyQt5>=5.15",
    "segno[pil]>=1.6",
    "opencv-python>=4.8",
    "pyzbar>=0.1.9",
    "numpy>=1.25",
    "Pillow>=10",
]

[project.scripts]
secure-qr-tool = "secure_qr_tool.__main__:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
